# lab5setr

./: .gitignore
laboratoire-5/: CMakeLists.txt  bluetoothServer.c  bluetoothUtils.h  includes.h  main.c  opusUtils.c  syncAndStartGDB.sh
laboratoire-5-pc/: CMakeLists.txt  alsaUtils.c  audio.c  bluetoothClient.c  bluetoothServer.c  bluetoothUtils.h  compress.c  includes.h  main.c  opusUtils.c  opusUtils.h
laboratoire-5-pc/musicTest/: tmpFile.tmp
laboratoire-5-pi/: CMakeLists.txt  bluetoothClient.c  bluetoothServer.c  bluetoothUtils.h  haba128000.compressed  haba28000.compressed  includes.h  main.c  opusUtils.c  opusUtils.h  sync.sh  syncHeaders.sh
